--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="/eg/sorting_eg/bubble_eg.html">Bubble</a>
-    <a href="/eg/sorting_eg/cocktail_eg.html">Cocktail</a>
+    <a href="./eg/sorting_eg/bubble_eg.html">Bubble</a>
+    <a href="./eg/sorting_eg/cocktail_eg.html">Cocktail</a>
     <a href="/eg/sorting_eg/counting_eg.html">Counting</a>
-    <a href="/eg/sorting_eg/heap_eg.html">Heap</a>
-    <a href="/eg/sorting_eg/insertion_eg.html">Insertion</a>
-    <a href="/eg/sorting_eg/merge_eg.html">Merge</a>
-    <a href="/eg/sorting_eg/quick_eg.html">Quick</a>
-    <a href="/eg/sorting_eg/selection_eg.html">Selection</a>
-    <a href="/eg/sorting_eg/shell_eg.html">Shell</a>
+    <a href="./eg/sorting_eg/heap_eg.html">Heap</a>
+    <a href="./eg/sorting_eg/insertion_eg.html">Insertion</a>
+    <a href="./eg/sorting_eg/merge_eg.html">Merge</a>
+    <a href="./eg/sorting_eg/quick_eg.html">Quick</a>
+    <a href="./eg/sorting_eg/selection_eg.html">Selection</a>
+    <a href="./eg/sorting_eg/shell_eg.html">Shell</a>
     
 
 </body>
