--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <a href="./eg/sorting_eg/bubble_eg.html">Bubble</a>
     <a href="./eg/sorting_eg/cocktail_eg.html">Cocktail</a>
-    <a href="/eg/sorting_eg/counting_eg.html">Counting</a>
+    <a href="./eg/sorting_eg/counting_eg.html">Counting</a>
     <a href="./eg/sorting_eg/heap_eg.html">Heap</a>
     <a href="./eg/sorting_eg/insertion_eg.html">Insertion</a>
     <a href="./eg/sorting_eg/merge_eg.html">Merge</a>
