--- a/index.html
+++ b/index.html
@@ -8,6 +8,21 @@
     <title>Document</title>
 </head>
 <body>
+    <!-- <header>
+        <div class="container">
+            <nav>
+                <ul>
+                    <li><a href="#">Lorem</a></li>
+                    <li><a href="#">Lorem</a></li>
+                    <li><a href="#">Lorem</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header> -->
+    <select class="right" name="forma" onchange="location = this.value;">
+        <option value="./index.html">English</option>
+        <option value="./bg/index_bg.html">Български</option>
+    </select>
     <a href="./eg/sorting_eg/bubble_eg.html">Bubble</a>
     <a href="./eg/sorting_eg/cocktail_eg.html">Cocktail</a>
     <a href="./eg/sorting_eg/counting_eg.html">Counting</a>
@@ -18,6 +33,10 @@
     <a href="./eg/sorting_eg/selection_eg.html">Selection</a>
     <a href="./eg/sorting_eg/shell_eg.html">Shell</a>
     
-
+    <br>
+    <a href="./eg/searching_eg/binary_eg.html">Binary</a>
+    <a href="./eg/searching_eg/jump_eg.html">Jump</a>
+    <a href="./eg/searching_eg/linear_eg.html">Linear</a>
+    <a href="./eg/searching_eg/ternary_eg.html">Ternary</a>
 </body>
 </html>
