fixed english pages redirecting to index

--- a/eg/searching_eg/binary_eg.html
+++ b/eg/searching_eg/binary_eg.html
@@ -12,7 +12,7 @@
         <div class="container">
             <nav>
                 <ul>
-                    <li><a href="../../index_eg.html">Home</a></li>
+                    <li><a href="../../index.html">Home</a></li>
                     <li><a href="./binary_eg.html">Binary</a></li>
                     <li><a href="./jump_eg.html">Jump</a></li>
                     <li><a href="./linear_eg.html">Linear</a></li>
