--- a/eg/sorting_eg/cocktail_eg.html
+++ b/eg/sorting_eg/cocktail_eg.html
@@ -12,7 +12,7 @@
         <div class="container">
             <nav>
                 <ul>
-                    <li><a href="../../index_eg.html">Home</a></li>
+                    <li><a href="../../index.html">Home</a></li>
                     <li><a href="./bubble_eg.html">Bubble</a></li>
                     <li><a href="./cocktail_eg.html">Cocktail</a></li>
                     <li><a href="./counting_eg.html">Counting</a></li>
