added - index page, c++ to languages, translation to pages

--- a/bg/index_bg.html
+++ b/bg/index_bg.html
@@ -8,21 +8,40 @@
     <title>Document</title>
 </head>
 <body>
-    <!-- <header>
+    <header class="header">
         <div class="container">
             <nav>
                 <ul>
-                    <li><a href="#">Lorem</a></li>
-                    <li><a href="#">Lorem</a></li>
-                    <li><a href="#">Lorem</a></li>
+                    <li><a href="../../index.html">Начало</a></li>
+                    <li><a href="./sorting_bg/bubble_bg.html">Алгоритми за сортиране</a></li>
+                    <li><a href="./searching_bg/binary_bg.html">Алгоритми за търсене</a></li>
                 </ul>
             </nav>
+            <select class="right" name="forma" onchange="location = this.value;">
+                <option value="./bg/index_bg.html">Български</option>
+                <option value="../index.html">English</option>
+            </select>
         </div>
-    </header> -->
-    <select class="right" name="forma" onchange="location = this.value;">
-        <option value="./bg/index_bg.html">Български</option>
-        <option value="../index.html">English</option>
-    </select>
+    </header>
+    <main class="page">
+        <section>
+          <div class="container-list">
+            <a href="./sorting_bg/bubble_bg.html">
+              <img
+                src="../assets/sorting.png"
+                class="img container-img " alt="" />
+                <center><h5>Алгоритми за сортиране</h5></center>
+            </a>
+            <a href="./searching_bg/binary_bg.html">
+              <img
+                src="../assets/searching.png"
+                class="img container-img "alt="" />
+              <center><h5>Алгоритми за търсене</h5></center>
+            </a>
+          </div>
+        </section>
+      </main>
+<!-- 
     <a href="../bg/sorting_bg/bubble_bg.html">Мехурче</a>
     <a href="../bg/sorting_bg/cocktail_bg.html">Cocktail</a>
     <a href="../bg/sorting_bg/counting_bg.html">Броене</a>
@@ -37,6 +56,6 @@
     <a href="../bg/searching_bg/binary_bg.html">Бинарно</a>
     <a href="../bg/searching_bg/jump_bg.html">Jump</a>
     <a href="../bg/searching_bg/linear_bg.html">Линейно</a>
-    <a href="../bg/searching_bg/ternary_bg.html">Ternary</a>
+    <a href="../bg/searching_bg/ternary_bg.html">Ternary</a> -->
 </body>
 </html>
