--- a/index.html
+++ b/index.html
@@ -8,22 +8,40 @@
     <title>Document</title>
 </head>
 <body>
-    <!-- <header>
+    <header class="header">
         <div class="container">
             <nav>
                 <ul>
-                    <li><a href="#">Lorem</a></li>
-                    <li><a href="#">Lorem</a></li>
-                    <li><a href="#">Lorem</a></li>
+                    <li><a href="../../index.html">Home</a></li>
+                    <li><a href="./eg/sorting_eg/bubble_eg.html">Sorting algorithms</a></li>
+                    <li><a href="./eg/searching_eg/binary_eg.html">Searching algorithms</a></li>
                 </ul>
             </nav>
+            <select class="right" name="forma" onchange="location = this.value;">
+                <option value="./index.html">English</option>
+                <option value="./bg/index_bg.html">Български</option>
+            </select>
         </div>
-    </header> -->
-    <select class="right" name="forma" onchange="location = this.value;">
-        <option value="./index.html">English</option>
-        <option value="./bg/index_bg.html">Български</option>
-    </select>
-    <a href="./eg/sorting_eg/bubble_eg.html">Bubble</a>
+    </header>
+    <main class="page">
+        <section>
+          <div class="container-list">
+            <a href="./eg/sorting_eg/bubble_eg.html">
+              <img
+                src="./assets/sorting.png"
+                class="img container-img " alt="" />
+                <center><h5>Sorting algorithms</h5></center>
+            </a>
+            <a href="./eg/searching_eg/binary_eg.html">
+              <img
+                src="./assets/searching.png"
+                class="img container-img "alt="" />
+              <center><h5>Searching algorithms</h5></center>
+            </a>
+          </div>
+        </section>
+      </main>
+    <!-- <a href="./eg/sorting_eg/bubble_eg.html">Bubble</a>
     <a href="./eg/sorting_eg/cocktail_eg.html">Cocktail</a>
     <a href="./eg/sorting_eg/counting_eg.html">Counting</a>
     <a href="./eg/sorting_eg/heap_eg.html">Heap</a>
@@ -37,6 +55,6 @@
     <a href="./eg/searching_eg/binary_eg.html">Binary</a>
     <a href="./eg/searching_eg/jump_eg.html">Jump</a>
     <a href="./eg/searching_eg/linear_eg.html">Linear</a>
-    <a href="./eg/searching_eg/ternary_eg.html">Ternary</a>
+    <a href="./eg/searching_eg/ternary_eg.html">Ternary</a> -->
 </body>
 </html>
