--- a/bg/sorting_bg/bubble_bg.html
+++ b/bg/sorting_bg/bubble_bg.html
@@ -12,16 +12,16 @@
         <div class="container">
             <nav>
                 <ul>
-                    <li><a href="../index_bg.html">Home</a></li>
-                    <li><a href="./bubble_bg.html">Bubble</a></li>
-                    <li><a href="./cocktail_bg.html">Cocktail</a></li>
-                    <li><a href="./counting_bg.html">Counting</a></li>
-                    <li><a href="./heap_bg.html">Heap</a></li>
-                    <li><a href="./insertion_bg.html">Insertion</a></li>
-                    <li><a href="./merge_bg.html">Merge</a></li>
-                    <li><a href="./quick_bg.html">Quick</a></li>
-                    <li><a href="./selection_bg.html">Selection</a></li>
-                    <li><a href="./shell_bg.html">Shell</a></li>
+                    <li><a href="../index_bg.html">Начало</a></li>
+                    <li><a href="./bubble_bg.html">Мехурче</a></li>
+                    <li><a href="./cocktail_bg.html">Клатене</a></li>
+                    <li><a href="./counting_bg.html">Броене</a></li>
+                    <li><a href="./heap_bg.html">Пирамидално</a></li>
+                    <li><a href="./insertion_bg.html">Вмъкване</a></li>
+                    <li><a href="./merge_bg.html">Сливане</a></li>
+                    <li><a href="./quick_bg.html">Бързо</a></li>
+                    <li><a href="./selection_bg.html">Селекция</a></li>
+                    <li><a href="./shell_bg.html">Шел</a></li>
                 </ul>
             </nav>
             <select class="right" name="forma" onchange="location = this.value;">
@@ -58,6 +58,7 @@
     <button id="JSbtnClick" class="custom-btn btn-1" onclick="js()">JS</button>
     <button id="JSbtnClick" class="custom-btn btn-1" onclick="python()">Python</button>
     <button id="C#btnClick" class="custom-btn btn-1" onclick="c()">C#</button>
+    <button id="C++btnClick" class="custom-btn btn-1" onclick="cPlus()">C++</button>
 
     <div class="flex-container">
         <div id="CodeJS" class="keepFormatted flex-item-left">
@@ -98,15 +99,20 @@ static void bubbleSort(int []arr)
             }
 }
         </div>
+        <div id="CodeC++" style="display:none;" class="keepFormatted flex-item-left">
+void bubbleSort(int arr[], int n)
+{
+    int i, j;
+    for (i = 0; i < n - 1; i++)
+        for (j = 0; j < n - i - 1; j++)
+            if (arr[j] > arr[j + 1])
+                swap(arr[j], arr[j + 1]);
+}
+        </div>
         <div class="flex-item-right">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt harum ipsum aliquid doloremque dicta, fugit facere vitae tempora cupiditate alias eos quisquam accusantium recusandae illo vel quod, adipisci facilis voluptatum!
+            Взимаме първият елемент на масива и го сравняваме със следващия и разменяме стойностите им, ако първият е по- голям от втория. След това сравняваме вторият елемент с третия и пак разменяме, ако има нужда. След това започваме отново да сравняваме като пак взимаме първият елемент и сравняваме с втория и така нататък.
         </div>
     </div>
-    <!-- <script>
-        function rangeFunction() {
-	generatearray();
-}
-    </script> -->
 </body>
 <script src="../../script.js"></script>
 </html>
