--- a/bg/sorting_bg/selection_bg.html
+++ b/bg/sorting_bg/selection_bg.html
@@ -12,16 +12,16 @@
         <div class="container">
             <nav>
                 <ul>
-                    <li><a href="../index_bg.html">Home</a></li>
-                    <li><a href="./bubble_bg.html">Bubble</a></li>
-                    <li><a href="./cocktail_bg.html">Cocktail</a></li>
-                    <li><a href="./counting_bg.html">Counting</a></li>
-                    <li><a href="./heap_bg.html">Heap</a></li>
-                    <li><a href="./insertion_bg.html">Insertion</a></li>
-                    <li><a href="./merge_bg.html">Merge</a></li>
-                    <li><a href="./quick_bg.html">Quick</a></li>
-                    <li><a href="./selection_bg.html">Selection</a></li>
-                    <li><a href="./shell_bg.html">Shell</a></li>
+                    <li><a href="../index_bg.html">Начало</a></li>
+                    <li><a href="./bubble_bg.html">Мехурче</a></li>
+                    <li><a href="./cocktail_bg.html">Клатене</a></li>
+                    <li><a href="./counting_bg.html">Броене</a></li>
+                    <li><a href="./heap_bg.html">Пирамидално</a></li>
+                    <li><a href="./insertion_bg.html">Вмъкване</a></li>
+                    <li><a href="./merge_bg.html">Сливане</a></li>
+                    <li><a href="./quick_bg.html">Бързо</a></li>
+                    <li><a href="./selection_bg.html">Селекция</a></li>
+                    <li><a href="./shell_bg.html">Шел</a></li>
                 </ul>
             </nav>
             <select class="right" name="forma" onchange="location = this.value;">
@@ -59,6 +59,7 @@
     <button id="JSbtnClick" class="custom-btn btn-1" onclick="js()">JS</button>
     <button id="JSbtnClick" class="custom-btn btn-1" onclick="python()">Python</button>
     <button id="C#btnClick" class="custom-btn btn-1" onclick="c()">C#</button>
+    <button id="C++btnClick" class="custom-btn btn-1" onclick="cPlus()">C++</button>
 
     <div class="flex-container">
         <div id="CodeJS" class="keepFormatted flex-item-left">
@@ -105,6 +106,29 @@ static void sort(int []arr)
         arr[i] = temp;
     }
 }
+        </div>
+        <div id="CodeC++" style="display:none;" class="keepFormatted flex-item-left">
+void swap(int *xp, int *yp) 
+{ 
+    int temp = *xp; 
+    *xp = *yp; 
+    *yp = temp; 
+} 
+    
+void selectionSort(int arr[], int n) 
+{ 
+    int i, j, min_idx; 
+
+    for (i = 0; i < n-1; i++) 
+    { 
+        min_idx = i; 
+        for (j = i+1; j < n; j++) 
+        if (arr[j] < arr[min_idx]) 
+            min_idx = j; 
+
+        swap(&arr[min_idx], &arr[i]); 
+    } 
+} 
         </div>
         <div class="flex-item-right">
             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Autem, nemo? Maiores, possimus? Sunt aspernatur autem, aut cum inventore quo? Hic dolore id, nesciunt quibusdam porro culpa praesentium. Soluta, ipsam obcaecati.
