--- a/eg/searching_eg/ternary_eg.html
+++ b/eg/searching_eg/ternary_eg.html
@@ -66,6 +66,8 @@
     <button id="JSbtnClick" class="custom-btn btn-1" onclick="js()">JS</button>
     <button id="JSbtnClick" class="custom-btn btn-1" onclick="python()">Python</button>
     <button id="C#btnClick" class="custom-btn btn-1" onclick="c()">C#</button>
+    <button id="C++btnClick" class="custom-btn btn-1" onclick="cPlus()">C++</button>
+
     <div class="flex-container">
         <div id="CodeJS" class="keepFormatted flex-item-left">
 function ternarySearch(l, r, key, ar)
@@ -136,24 +138,50 @@ static int ternarySearch(int l, int r, int key, int[] ar)
     return -1;
 }
         </div>
+        <div id="CodeC++" style="display:none;" class="keepFormatted flex-item-left">
+int ternarySearch(int l, int r, int key, int ar[])
+{
+    if (r >= l) {
+        int mid1 = l + (r - l) / 3;
+        int mid2 = r - (r - l) / 3;
+
+        if (ar[mid1] == key) {
+            return mid1;
+        }
+        if (ar[mid2] == key) {
+            return mid2;
+        }
+
+        if (key < ar[mid1]) {
+            return ternarySearch(l, mid1 - 1, key, ar);
+        }
+        else if (key > ar[mid2]) {
+            return ternarySearch(mid2 + 1, r, key, ar);
+        }
+        else {
+            return ternarySearch(mid1 + 1, mid2 - 1, key, ar);
+        }
+    }
+    return -1;
+}
+        </div>
         <div class="flex-item-right">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt harum ipsum aliquid doloremque dicta, fugit facere vitae tempora cupiditate alias eos quisquam accusantium recusandae illo vel quod, adipisci facilis voluptatum!
         </div>
     </div>
 
-    <!-- The Modal -->
     <div id="myModal" class="modal">
         <div class="modal-content">
             <span class="close">&times;</span>
             <section class="c-container">
                 <div id="container-success" style="display: none">
                     <div class="o-circle c-container__circle o-circle__sign--success">
-                        <div class="o-circle__sign"></div>
+                        <div class="check-mark-sign">&#10004</div>
                     </div>
                 </div>
                 <div id="container-fail" style="display: none">
                     <div class="o-circle c-container__circle o-circle__sign--failure">
-                        <div class="o-circle__sign"></div>
+                        <div class="x-sign">&times;</div>
                     </div>
                 </div>
             </section>
