--- a/eg/sorting_eg/cocktail_eg.html
+++ b/eg/sorting_eg/cocktail_eg.html
@@ -58,6 +58,7 @@
     <button id="JSbtnClick" class="custom-btn btn-1" onclick="js()">JS</button>
     <button id="JSbtnClick" class="custom-btn btn-1" onclick="python()">Python</button>
     <button id="C#btnClick" class="custom-btn btn-1" onclick="c()">C#</button>
+    <button id="C++btnClick" class="custom-btn btn-1" onclick="cPlus()">C++</button>
 
     <div class="flex-container">
         <div id="CodeJS" class="keepFormatted flex-item-left">
@@ -95,7 +96,6 @@ function cocktailSort(arr)
     }
 }
         </div>
-    
         <div id="CodePy" style="display:none;" class="keepFormatted flex-item-left">
 def cocktailSort(arr):
     n = len(arr)
@@ -122,7 +122,6 @@ def cocktailSort(arr):
                 swapped = True
         start = start + 1
         </div>
-        
         <div id="CodeC#" style="display:none;" class="keepFormatted flex-item-left">
 static void cocktailSort(int[] arr)
 {
@@ -156,6 +155,38 @@ static void cocktailSort(int[] arr)
             }
         }
         start = start + 1;
+    }
+}
+        </div>
+        <div id="CodeC++" style="display:none;" class="keepFormatted flex-item-left">
+void CocktailSort(int a[], int n)
+{
+    bool swapped = true;
+    int start = 0;
+    int end = n - 1;
+    while (swapped)
+    {
+        swapped = false;
+        for (int i = start; i < end; ++i)
+        {
+            if (a[i] > a[i + 1]) {
+                swap(a[i], a[i + 1]);
+                swapped = true;
+            }
+        }
+        if (!swapped)
+            break;
+
+        swapped = false;
+        --end;
+        for (int i = end - 1; i >= start; --i)
+        {
+            if (a[i] > a[i + 1]) {
+                swap(a[i], a[i + 1]);
+                swapped = true;
+            }
+        }
+        ++start;
     }
 }
         </div>
