--- a/eg/sorting_eg/insertion_eg.html
+++ b/eg/sorting_eg/insertion_eg.html
@@ -59,8 +59,9 @@
     <button id="JSbtnClick" class="custom-btn btn-1" onclick="js()">JS</button>
     <button id="JSbtnClick" class="custom-btn btn-1" onclick="python()">Python</button>
     <button id="C#btnClick" class="custom-btn btn-1" onclick="c()">C#</button>
-    <div class="flex-container">
+    <button id="C++btnClick" class="custom-btn btn-1" onclick="cPlus()">C++</button>
 
+    <div class="flex-container">
         <div id="CodeJS" class="keepFormatted flex-item-left">
 function insertionSort(arr, n) 
 { 
@@ -105,7 +106,24 @@ void sort(int[] arr)
     }
 }
         </div>
-
+        <div id="CodeC++" style="display:none;" class="keepFormatted flex-item-left">
+void insertionSort(int arr[], int n)
+{
+    int i, key, j;
+    for (i = 1; i < n; i++)
+    {
+        key = arr[i];
+        j = i - 1;
+    
+        while (j >= 0 && arr[j] > key)
+        {
+            arr[j + 1] = arr[j];
+            j = j - 1;
+        }
+        arr[j + 1] = key;
+    }
+}
+        </div>
         <div class="flex-item-right">
             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dicta tenetur vel iure ipsa labore earum hic quos possimus necessitatibus suscipit consequuntur, qui ex aspernatur doloremque nobis! Nemo dolorum cum delectus.
         </div>
