--- a/eg/sorting_eg/selection_eg.html
+++ b/eg/sorting_eg/selection_eg.html
@@ -59,6 +59,7 @@
     <button id="JSbtnClick" class="custom-btn btn-1" onclick="js()">JS</button>
     <button id="JSbtnClick" class="custom-btn btn-1" onclick="python()">Python</button>
     <button id="C#btnClick" class="custom-btn btn-1" onclick="c()">C#</button>
+    <button id="C++btnClick" class="custom-btn btn-1" onclick="cPlus()">C++</button>
 
     <div class="flex-container">
         <div id="CodeJS" class="keepFormatted flex-item-left">
@@ -105,6 +106,29 @@ static void sort(int []arr)
         arr[i] = temp;
     }
 }
+        </div>
+        <div id="CodeC++" style="display:none;" class="keepFormatted flex-item-left">
+void swap(int *xp, int *yp) 
+{ 
+    int temp = *xp; 
+    *xp = *yp; 
+    *yp = temp; 
+} 
+    
+void selectionSort(int arr[], int n) 
+{ 
+    int i, j, min_idx; 
+
+    for (i = 0; i < n-1; i++) 
+    { 
+        min_idx = i; 
+        for (j = i+1; j < n; j++) 
+        if (arr[j] < arr[min_idx]) 
+            min_idx = j; 
+
+        swap(&arr[min_idx], &arr[i]); 
+    } 
+} 
         </div>
         <div class="flex-item-right">
             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Autem, nemo? Maiores, possimus? Sunt aspernatur autem, aut cum inventore quo? Hic dolore id, nesciunt quibusdam porro culpa praesentium. Soluta, ipsam obcaecati.
