Added bulgarian description of alorithms

--- a/bg/sorting_bg/bubble_bg.html
+++ b/bg/sorting_bg/bubble_bg.html
@@ -110,7 +110,7 @@ void bubbleSort(int arr[], int n)
 }
         </div>
         <div class="flex-item-right">
-            Взимаме първият елемент на масива и го сравняваме със следващия и разменяме стойностите им, ако първият е по- голям от втория. След това сравняваме вторият елемент с третия и пак разменяме, ако има нужда. След това започваме отново да сравняваме като пак взимаме първият елемент и сравняваме с втория и така нататък.
+            Взимаме първият елемент на масива и го сравняваме със следващия и разменяме стойностите им, ако първият е по-голям от втория. След това сравняваме вторият елемент с третия и пак разменяме, ако има нужда. Когато обхождането достигне края на масива започваме отново да сравняваме като пак взимаме първият елемент и сравняваме с втория и така нататък. В най-лошият случай когато масивът е обърнат на обратно, скоростта на алгоритъма според е O(n2). Средната му скорост също се измерва в O(n2). В най-добрият случай когато масивът е сортиран скоростта на алгоритъма в този случай се измерва в O(n). 
         </div>
     </div>
 </body>
