--- a/bg/sorting_bg/cocktail_bg.html
+++ b/bg/sorting_bg/cocktail_bg.html
@@ -193,7 +193,7 @@ void CocktailSort(int a[], int n)
 }
         </div>
         <div class="flex-item-right">
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Recusandae velit praesentium cupiditate facilis dolore? Fugit omnis dicta porro commodi beatae vel tempora, quasi quia perferendis laborum maxime illum, labore quidem?
+            Взимаме първият елемент на масива и го сравняваме със следващия и разменяме стойностите им, ако първият е по-голям от втория. След това сравняваме вторият елемент с третия и пак разменяме, ако има нужда. Когато обхождането стигне до края на масива, вместо да започне своето обхождане отначало, той се връща назад, като обхожда елементите отдясно наляво и отново разменя елементите, докато не достигне началото на масива. Горепосочените стъпки се повтарят, докато масивът не бъде сортиран. Средната му скорост е O(n2). В най-добрият случай, когато елементите са почти на правилните си места скоростта му се измерва в O(n). Тъй като средната скорост е O(n2), следователно и скоростта в най-лошия случай отново се измерва в O(n2).
         </div>
     </div>
 </body>
