--- a/bg/sorting_bg/counting_bg.html
+++ b/bg/sorting_bg/counting_bg.html
@@ -157,7 +157,7 @@ void countSort(vector<int>& arr)
 }
         </div>
         <div class="flex-item-right">
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cupiditate nesciunt quas ex. Ipsum asperiores sunt expedita laboriosam omnis. Sit sapiente temporibus reprehenderit voluptate nam id ducimus numquam animi iste nostrum.
+            Алгоритъмът брои обектите с различни стойности, след което разполага в изходния масив броя срещания на всеки елемент. След това се изчислява кумулативна сума, за да се определи началната позиция на всеки елемент. Накрая елементите се обхождат отново, като се преместват на правилните позиции в изходния масив. Скоростта на сортирането чрез броене се оценява на O(n + k).
         </div>
     </div>
 </body>
