--- a/bg/sorting_bg/selection_bg.html
+++ b/bg/sorting_bg/selection_bg.html
@@ -131,7 +131,7 @@ void selectionSort(int arr[], int n)
 } 
         </div>
         <div class="flex-item-right">
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Autem, nemo? Maiores, possimus? Sunt aspernatur autem, aut cum inventore quo? Hic dolore id, nesciunt quibusdam porro culpa praesentium. Soluta, ipsam obcaecati.
+            Взимаме първият елемент от масива и го сравняваме с всички останали елементи, като целта е да се намери най-малкия елемент в масива, когато най-малкия елемент е намерен той се разменя с елемента на индекс едно, ако пък елемента на индекс едно е най-малък то той не се разменя. Стъпките се повтарят за оставащите в масива елементи, докато той не бъде сортиран. В най-лошия случай скоростта на алгоритъма според BigO е O(n2). Средната му скорост също се измерва в O(n2). В най-добрия случай скоростта на алгоритъма се измерва в O(n2).
         </div>
     </div>
 </body>
