--- a/bg/sorting_bg/shell_bg.html
+++ b/bg/sorting_bg/shell_bg.html
@@ -137,13 +137,10 @@ int shellSort(int arr[], int n)
     return 0;
 }
         </div>
-        <div class="flex-item-right">Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit, voluptatem. Autem nobis inventore tempora, voluptatum accusamus quam molestiae delectus similique quasi facilis natus eaque. Magni accusamus rerum est deleniti ad!</div>
+        <div class="flex-item-right">
+            Сортирането на Шел започва сравнението и разменянето на елементите, с онези, които са отдалечени, преди да се извърши сравнението със съседните. Първо определяме разстоянието (gap) между елементите, които трябва да бъдат сортирани. При първата итерация делим размера на масива на две и получаваме разстоянието между елементите. След това обхождането на масива продължава, докато не се стигне до края на масива, междувременно елементите, които са селектирани се сравняват и се поставят на правилното място. Когато първата итерация на масива приключи, разстоянието се намалява наполовина. Отново се обхожда масива и се правят необходимите сравнения и размени. Разстоянието намалява, докато не достигне едно, когато достигне разстояние едно, на практика сортирането става сортиране чрез вмъкване. Средната скорост на сортировката не може да се определи, защото зависи от разстоянието между елементите.
+        </div>
     </div>
-    <!-- <script>
-        function rangeFunction() {
-	generatearray();
-}
-    </script> -->
 </body>
 <script src="../../script.js"></script>
 </html>
