--- a/bg/sorting_bg/heap_bg.html
+++ b/bg/sorting_bg/heap_bg.html
@@ -191,7 +191,7 @@ void heapSort(int arr[], int n)
 }
         </div>
         <div class="flex-item-right">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum optio, maiores obcaecati quasi inventore deserunt ex. Temporibus veritatis illum nihil deserunt quidem voluptatem ullam, laboriosam molestias repudiandae consectetur repellendus? Sapiente?
+            При пирамидалното сортиране се използва самобалансиращо бинарно дърво за търсене (complete binary tree), то се нарича heap. Heap структура от данни - всички възли в дървото следват свойството, че те са по-големи от техните деца, т.е. най-големият елемент е в корена и двата му дъщерни елементи са по-малки от корена. Такъв heap се нарича max-heap. Ако вместо това всички възли са по-малки от техните деца, това се нарича min-heap. Първата стъпка при пирамидалното сортиране е дървото да се превърне в max heap. Функция heapify отговаря за размяната на елементи в дървото. Когато изискванията за max heap са изпълнени пирамидалното сортиране прави размяна на корена на дървото и последния елемент в масива. Когато размяната се осъществи премахваме елемента, който преди е бил корен от heap-а. След това пак се използва помощната функция heapify, за да имаме най-голямата стойност от масива, като корен. Този процес се повтаря, докато масивът не се сортира. Пирамидалното сортиране има скорост от O(n logn) във всички случаи най-добър, среден и най-лош.
         </div>
     </div>
 </body>
