Added description to searching algorithms (bulgarian language)

--- a/bg/searching_bg/jump_bg.html
+++ b/bg/searching_bg/jump_bg.html
@@ -168,7 +168,7 @@ int jumpSearch(int arr[], int x, int n)
 }
         </div>
         <div class="flex-item-right">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt harum ipsum aliquid doloremque dicta, fugit facere vitae tempora cupiditate alias eos quisquam accusantium recusandae illo vel quod, adipisci facilis voluptatum!
+            При търсенето със скоци масивът трябва да бъде предварително сортиран. Алгоритъмът работи по следния начин: изчислява се големината на „скока“ (корен от дължината на масива), когато големината на „скока“ се изчисли, алгоритъмът започва от началото на масива, след това се прави „скок“, ако елементът, който е търсен бъде задминат от „скока“, то се започва линейно търсене, докато не бъде намерен търсеният елемент. Големината на „скока“ се изчислява в началото и си остава с константна стойност. Скоростта на търсенето със скоци се измерва в O(√n).
         </div>
     </div>
 
