--- a/bg/searching_bg/linear_bg.html
+++ b/bg/searching_bg/linear_bg.html
@@ -112,7 +112,7 @@ int search(int arr[], int n, int x)
 }
         </div>
         <div class="flex-item-right">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt harum ipsum aliquid doloremque dicta, fugit facere vitae tempora cupiditate alias eos quisquam accusantium recusandae illo vel quod, adipisci facilis voluptatum!
+            При линейното търсене масивът не е нужно да бъде сортиран. При него последователно се обхожда всеки елемент от масива, докато търсеният елемент не бъде намерен. Линейното търсене има средна скорост от O(n). Най-лошият случай има скорост от O(n), а в най-добрият случай има скорост от O(1).
         </div>
     </div>
     <div id="myModal" class="modal">
